# neptunium-frontend

./: .env.example  .env.production  .eslintignore  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  netlify.toml  next.config.js  next.config.production.js  package-lock.json  package.json  postcss.config.mjs  test-report.json
database/: complete-schema.sql  migration.sql  schema-compatible.sql  schema.sql
docs/: NETLIFY_DEPLOYMENT.md  RESEND_EMAIL_SETUP.md  RESEND_SETUP.md
netlify/functions/: api-key-new.ts  api-key.ts  auth-login-new.ts  auth-login.ts  auth-register-new.ts  auth-register.ts  auth-verify-email.ts  auth-verify.ts  dashboard-stats.ts  files-history-new.ts  health-check.ts  health.ts  projection-new.ts  projection.ts  rust-example.ts  send-verification-code.ts  test-email.ts  test-simple.ts  upload-file-new.ts  upload-file.ts  user-files.ts
rust-backend/: Cargo.toml  build.sh
rust-backend/src/: auth.rs  config.rs  database.rs  files.rs  lib.rs  utils.rs
scripts/: deploy.sh  setup-production.sh  test-basic.js  test-e2e.js  test-production.sh
src/app/: globals.css  layout.tsx  page.tsx  tailwind.css
src/app/api-docs/: page.tsx
src/app/api-key/: page-new.tsx  page.tsx
src/app/files/: page-new.tsx  page.tsx
src/app/login/: page.tsx
src/contexts/: AuthContext.tsx
src/lib/: auth.ts  config.ts  database.ts  email.ts  logger.ts  middleware.ts  redis.ts  rust-core.ts  storage.ts  supabase.ts  utils.ts  wasm-fallback.js
(+12 files in other folders)
