[package]
name = "neptunium-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM 绑定
wasm-bindgen = "0.2"
js-sys = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# 加密和哈希 (WASM 兼容版本)
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# 时间处理 (WASM 兼容)
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# 错误处理
thiserror = "1.0"

# 随机数生成 (WASM 兼容)
getrandom = { version = "0.2", features = ["js"] }

# Base64 编码
base64 = "0.22"

# 日志 (WASM 兼容)
console_log = "1.0"
log = "0.4"

# MD5 哈希 (用于文件校验)
md5 = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
